--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Personal Website of Bekhzod Allaev - sharing projects, ideas and articles in software engineering"
     />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
